# spinning-cube-simulator

./: .gitignore  .gitmodules  CMakeLists.txt
dep/lib/: libGLEW.2.2.0.dylib  libglfw.3.4.dylib
res/shaders/basic/: basic.frag  basic.vert
res/shaders/gridModule/: grid.frag  grid.vert
res/shaders/millingObject/: millingObject.frag  millingObject.geom  millingObject.vert
src/: QuadUtils.h  VariantUtil.h  glew_glfw.h  main.cpp
src/MillingObjects/: mill.cpp  mill.h  millingHead.cpp  millingHead.h  millingPlate.cpp  millingPlate.h  pathObject.cpp  pathObject.h
src/app/: appContext.h
src/camera/: CameraAnchorFree.cpp  CameraAnchorFree.h  CameraGameLike.cpp  CameraGameLike.h  baseCamera.h
src/framebufferManager/: FrameBufferManager.cpp  FrameBufferManager.h
src/gCode/: gCodeLoader.cpp  gCodeLoader.h  gCodeParser.cpp  gCodeParser.h
src/gridModule/: gridModule.cpp  gridModule.h
src/gui/: gui.cpp  gui.h
src/inputHandler/: InputHandler.cpp  InputHandler.h
src/light/: PointLight.h
src/mesh/: mesh.cpp  mesh.h
src/millingObject/: millingObject.cpp  millingObject.h
src/objects/: cube.cpp  cube.h  line.cpp  line.h
src/objectsOpenGL/: EBO.cpp  EBO.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  vertex.h
src/renderContext/: renderContext.cpp  renderContext.h
src/scene/: scene.cpp  scene.h
src/shader/: shaderProgram.cpp  shaderProgram.h
src/simulation/: cubeSimulation.cpp  cubeSimulation.h  cubeSimulationBase.cpp  cubeSimulationBase.h  cubeSimulationThreads.cpp  cubeSimulationThreads.h
src/texture/: texture.cpp  texture.h
